namespace Nerds.Library.Business
{
    public class Customer
    {
    }
}