@startuml

class Organization {
	+Name
}
Organization *-- Books.Book
Business.BookBusiness --* Organization

package Books
{
	class Book {
		#ID
		+UniqueBarcode
	}
	Book -> BookTemplate

	class BookTemplate {
		#ID
	}
	BookTemplate --> Publication
	BookTemplate --> Title
	BookTemplate o--> Author
	BookTemplate o--> Genre


	class Author {
		#ID
		+Name
		+DayOfBirth
		+DayOfDeath
	}

	class Publication {
		+ISBN10
		+ISBN13
		+PublicationDate
	}
	Publication --> Publisher

	class Publisher {
		#ID
		+Name
	}

	class Genre {
		#ID
		+Caption
	}

	class Title {
		#ID
		+Caption
		+Subcaption
	}
}
package Business 
{
	class BookBusiness {
		+GetAvailableBooks(DateTime, Customer) : Book[]
		+Reserve(Book,Customer) : Reservation
		+Return(Book,Customer) : Reservation
	}
	BookBusiness o--> Reservation
	BookBusiness o--> Review
	BookBusiness o--> Availability

	Books.Book "*" <-o BookBusiness
	Books.BookTemplate "1" <- BookBusiness

	class Reservation {
		+BeginTerm
		+EndTerm
		+IsBookTaken
		+IsBookReturned
	}
	Reservation --> Customer
	Books.Book <.. Reservation

	class Availability {
		+BookId
		+UniqueBarcode
		+IsAvailable
	}

	class Customer {
		#ID
		+Name
		+EmailAddress
	}

	class Review {
		#ID
		+Stars
		+Text
	}
	Review --> Customer

}

@enduml